# dfx-extension

./: .gitignore  Cargo.toml  Makefile  README.md  extension.json  extension.json.tmpl
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
dfx/: extension.json  extension.json.tmpl
src/: main.rs
