[package]
name = "dfx-extension"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rikonor/dfx-extension"

[[bin]]
name = "dfx-extension"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive", "env"] }
tokio = { version = "1.43.0", features = ["full"] }
